Split home page into partials; fix horizontal scroll.

--- a/source/assets/stylesheets/app.scss
+++ b/source/assets/stylesheets/app.scss
@@ -571,24 +571,15 @@ code {
 
 .team {
   font-size: 0;
-  padding: 0 rem-calc(10);
-  margin-left: rem-calc(-10);
-  margin-top: rem-calc(-10);
-  @media #{$medium-up} {
-    margin-right: -60px;
-    margin-bottom: -60px;
-  }
 }
 .team__item {
+  box-sizing: border-box;
   display: inline-block;
   width: 50%;
-  padding-left: rem-calc(10);
-  padding-top: rem-calc(10);
+  padding: 0 rem-calc(30) rem-calc(20);
   vertical-align: top;
   @media #{$medium-up} {
     width: 20%;
-    padding-right: 60px;
-    padding-bottom: 60px;
   }
 }
 
